--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 @import "./setting";
 @import "./components/footer";
 @import "./components/nav";
-@import "./components/homebg";
+@import "./components/headerbg";
 @import "./components/home";
