--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,5 @@
 @import "./components/nav";
 @import "./components/headerbg";
 @import "./components/home";
+@import "./components/intro";
+@import "./components/media";
