--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,4 +1,12 @@
 .footer {
+
+display: flex;
+flex-direction: column;
+bottom: 0;
+justify-content: center;
+align-items: center;
+left: 50%;
+
 	h4{
 		color: $white;
 		padding: 10px 0;
@@ -10,6 +18,11 @@
 		height: 30px;
 		padding: 3px;
 		margin: 10px;
+		transition: 0.5s;
+	}
+
+	img:hover{
+		transform: scale(1.2);
 	}
 	.git {
 		left: 90%;
