--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -1,6 +1,9 @@
 .navigation {
+display: flex;
+flex-direction: column;
+
 	ul{
-		margin-top: 25%;
+		margin-top: 2%;
 		display: flex;
 		justify-content: space-around;
 	}
