--- a/src/styles/components/_headerbg.scss
+++ b/src/styles/components/_headerbg.scss
@@ -9,6 +9,7 @@
 	box-shadow: 0px 1px 2px 0px rgba(51, 51,51,0.5);
 }
 
+
 h1{
 	font-size: 5rem;
 	color: $white;
@@ -29,6 +30,29 @@ h1{
 
 .contact_bg {
 	background: url(../../assets/img/contact.jpg)center/cover;
+}
+
+.notfound {
+	background: url(../../assets/img/not_found.jpg)center/cover;
+	width: 100%;
+	height: 100vh;
+	h1{
+		padding-top: 100px;
+		color: black;
+	}
+	.backhome{
+		position: absolute;
+		top: 50%;
+		transform: translate(-50%);
+		text-decoration: none;
+		font-size: 2rem;
+		color: red;
+	}
+	.footer{
+		position: absolute;
+		transform: translate(-50%);
+	}
+	
 }
 
 
